@@ -18,11 +18,12 @@ makeRLearner.classif.randomForest = function() {
       makeLogicalLearnerParam(id = "do.trace", default = FALSE, tunable = FALSE),
       makeLogicalLearnerParam(id = "keep.inbag", default = FALSE, tunable = FALSE)
     ),
-    properties = c("twoclass", "multiclass", "numerics", "factors", "ordered", "prob", "class.weights"),
+    properties = c("twoclass", "multiclass", "numerics", "factors", "ordered", "prob", "class.weights", "submodel"),
     class.weights.param = "classwt",
+    submodel.param = "ntree",
     name = "Random Forest",
     short.name = "rf"
-    )
+  )
 }
 
 #' @export
@@ -42,6 +43,32 @@ trainLearner.classif.randomForest = function(.learner, .task, .subset, .weights 
 
 #' @export
 predictLearner.classif.randomForest = function(.learner, .model, .newdata, ...) {
-  type = ifelse(.learner$predict.type=="response", "response", "prob")
+  type = ifelse(.learner$predict.type == "response", "response", "prob")
+  dots = list(...)
+  if ("submodel.value" %in% names(dots))
+    .model$learner.model = extractSubforest(
+      model = .model$learner.model, submodel.value = dots$submodel.value)
   predict(.model$learner.model, newdata = .newdata, type = type, ...)
+}
+
+# reduces the size of the current randomForest to a value defined via submodel.value
+extractSubforest = function(model, submodel.value) {
+  rf = model
+  ntree = submodel.value
+  if (ntree > rf$ntree)
+    stopf("ntree (%i) exceeds the number of trees in the forest (%i).", ntree, rf$ntree)
+  rf$ntree = ntree
+  rf$forest$ndbigtree = rf$forest$ndbigtree[seq_len(ntree), drop = FALSE]
+  rf$forest$nodestatus = rf$forest$nodestatus[, seq_len(ntree), drop = FALSE]
+  rf$forest$bestvar = rf$forest$bestvar[, seq_len(ntree), drop = FALSE]
+  rf$forest$treemap = rf$forest$treemap[, , seq_len(ntree), drop = FALSE]
+  rf$forest$nodepred = rf$forest$nodepred[, seq_len(ntree), drop = FALSE]
+  rf$forest$xbestsplit = rf$forest$xbestsplit[, seq_len(ntree), drop = FALSE]
+  rf$forest$ntree = ntree
+  rf$err.rate = NULL
+  rf$confusion = NULL
+  rf$oob.times = NULL
+  rf$votes = NULL
+  rf$importanceSD = NULL
+  return(rf)
 }
